--- a/Shell.Application/Shell.Application.csproj
+++ b/Shell.Application/Shell.Application.csproj
@@ -1,10 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shell.Domain\Shell.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
