--- a/Shell/Properties/launchSettings.json
+++ b/Shell/Properties/launchSettings.json
@@ -1,12 +1,13 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "Shell": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      "commandLineArgs": "PATH=\"%USERPROFILE%\\.dotnet\\tools;%USERPROFILE%\\AppData\\Local\\Microsoft\\WindowsApps;$PATH\"",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
     }
-  }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
